cc.creativecomputing/log/Christian-Riekoffs-MacBook-Pro.local-2011-06-23_23-47-27.txt
[Thu Jun 23 23:47:27 CEST 2011] [CCLog Line:177:initialize] [INFO] logging to file: log/Christian-Riekoffs-MacBook-Pro.local-2011-06-23_23-47-27.txt
[Thu Jun 23 23:47:27 CEST 2011] [CCApp:display] [SEVERE] java.lang.reflect.UndeclaredThrowableException
	at $Proxy0.setup(Unknown Source)
	at cc.creativecomputing.CCApp.display(CCApp.java:559)
	at jogamp.opengl.GLDrawableHelper.display(GLDrawableHelper.java:191)
	at javax.media.opengl.awt.GLCanvas$DisplayAction.run(GLCanvas.java:873)
	at jogamp.opengl.GLDrawableHelper.invokeGL(GLDrawableHelper.java:363)
	at javax.media.opengl.awt.GLCanvas.maybeDoSingleThreadedWorkaround(GLCanvas.java:769)
	at javax.media.opengl.awt.GLCanvas.display(GLCanvas.java:388)
	at javax.media.opengl.awt.GLCanvas.paint(GLCanvas.java:487)
	at sun.awt.RepaintArea.paintComponent(RepaintArea.java:276)
	at sun.awt.RepaintArea.paint(RepaintArea.java:241)
	at apple.awt.ComponentModel.handleEvent(ComponentModel.java:263)
	at java.awt.Component.dispatchEventImpl(Component.java:4790)
	at java.awt.Component.dispatchEvent(Component.java:4544)
	at java.awt.EventQueue.dispatchEvent(EventQueue.java:635)
	at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:296)
	at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:211)
	at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:201)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:196)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:188)
	at java.awt.EventDispatchThread.run(EventDispatchThread.java:122)
Caused by: java.lang.reflect.InvocationTargetException
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:39)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:25)
	at java.lang.reflect.Method.invoke(Method.java:597)
	at cc.creativecomputing.events.CCListenerManager$ProxyInvocationHandler.invoke(CCListenerManager.java:170)
	... 20 more
Caused by: com.jogamp.opencl.CLException$CLBuildProgramFailureException: 
CLDevice [id: 16918016 name: GeForce 8600M GT type: GPU profile: FULL_PROFILE] build log:
<program source>:273:42:{273:42-273:47}: warning: excess elements in scalar initializer
 constant float noiseLengthScales = {0.4f,0.23f,0.11f};
                                          ^~~~~
<program source>:273:36:{273:36-273:54}: warning: braces around scalar initializer
 constant float noiseLengthScales = {0.4f,0.23f,0.11f};
                                    ^~~~~~~~~~~~~~~~~~
<program source>:274:31: error: invalid digit 'f' in decimal constant
 constant float noiseGains = {1f,0.5f,0.25f}
                               ^
<program source>:302:2: error: expected ';' at end of declaration
 }
  ^
  ;
CLDevice [id: 16909312 name: Intel(R) Core(TM)2 Duo CPU     T8300  @ 2.40GHz type: CPU profile: FULL_PROFILE] build log:
<program source>:273:42:{273:42-273:47}: warning: excess elements in scalar initializer
 constant float noiseLengthScales = {0.4f,0.23f,0.11f};
                                          ^~~~~
<program source>:273:36:{273:36-273:54}: warning: braces around scalar initializer
 constant float noiseLengthScales = {0.4f,0.23f,0.11f};
                                    ^~~~~~~~~~~~~~~~~~
<program source>:274:31: error: invalid digit 'f' in decimal constant
 constant float noiseGains = {1f,0.5f,0.25f}
                               ^
<program source>:302:2: error: expected ';' at end of declaration
 }
  ^
  ; [error: CL_BUILD_PROGRAM_FAILURE]
	at com.jogamp.opencl.CLException.newException(CLException.java:78)
	at com.jogamp.opencl.CLProgram.build(CLProgram.java:381)
	at cc.creativecomputing.opencl.CCCLProgram.build(CCCLProgram.java:188)
	at cc.creativecomputing.opencl.CCCLProgram.build(CCCLProgram.java:182)
	at cc.creativecomputing.particles.forces.CCNoiseField.build(CCNoiseField.java:81)
	at cc.creativecomputing.particles.CCParticles.addForce(CCParticles.java:282)
	at cc.creativecomputing.particles.demo.CCNoiseFieldDemo.setup(CCNoiseFieldDemo.java:35)
	... 25 more

